make website responsive

--- a/src/components/OverView Cont/OverViewCont.module.css
+++ b/src/components/OverView Cont/OverViewCont.module.css
@@ -58,3 +58,12 @@ font-weight: 500;
 .rightCont{
     width: 620px;
 }
+
+@media(max-width:1552px){
+ .leftCont{
+    width: 100%;
+ }  
+ .rightCont{
+    margin: auto;
+ } 
+}
