--- a/src/components/USER CONT/UserContainer.module.css
+++ b/src/components/USER CONT/UserContainer.module.css
@@ -2,7 +2,7 @@
     padding: 1rem;
     background-color: #fafafa;
     border-radius: 15px;
-    height: 95.5%;
+    height: 100%;
     position: relative;
 }
 .top{
@@ -30,7 +30,7 @@
     height: 100px;
     border-radius: 100%;
     bottom: -50px;
-    left: 125px;
+    left: 36%;
     z-index: 10;
 }
 .userName_infoCont{
