--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -9,22 +9,98 @@
     transition: padding-left .7s ease;
     padding-right: 1.5rem;
 }
-.infoOuterCont,.revOrdCustCont,.uaOsTpCont{
+.infoOuterCont{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    position: relative;
+}
+.revOrdCustCont,.uaOsTpCont{
     display: flex;
     flex-direction: row;
     gap: 1rem;
     flex-wrap: wrap;
 }
 .middleEntireDataCont{
-    width: 70%;
+    width: 72%;
     padding-left: 2.2rem;
+    overflow-y: scroll;
+    height: 90vh;
+    padding-bottom: 0rem;
+    transition: width .7s ease;
+}
+.middleEntireDataCont::-webkit-scrollbar {
+    display: none;
 }
 .userInfoRightCont{
-    width: 26%;
+    width: 21%;
+    position: fixed;
+    right: 1rem;
+    top: 4.4rem;
+    overflow-y: scroll;
+    height: 90vh;
+    transition: transform .8s ease;
+}
+.userInfoRightCont::-webkit-scrollbar {
+    display: none;
 }
 .overViewCont,.uaOsTpCont{
     margin-top: 1rem;
 }
 .userActivityCont,.orderStatsCont,.topProductsCont{
     width: 318px;
+    margin: auto;
+}
+.arrowRight{
+    cursor: pointer;
+    font-size: 1.5rem;
+    position: absolute;
+    z-index: 25;
+    color: grey;
+    right: -20px;
+}
+.close{
+    cursor: pointer;
+    font-size: 1.5rem;
+    position: absolute;
+    left: 1rem;
+    top: 1rem;
+    z-index: 25;
+    color: white;  
+}
+@media(max-width:1552px){
+   .innerCont{
+    padding-left: 1rem;
+   } 
+   .middleEntireDataCont{
+    width: 64%;
+   }
+   .userInfoRightCont{
+    width: 32%;
+    height: 94%;
+   }
+}
+
+@media(max-width:1220px){
+    .middleEntireDataCont{
+        width: 100%;
+       }
+}
+@media(max-width:980px){
+    .userInfoRightCont{
+        width: 40%;
+       }  
+}
+@media(max-width:790px){
+    .userActivityCont,.orderStatsCont,.topProductsCont{
+        width: 450px;
+    }
+    .userInfoRightCont{
+        width: 50%;
+       }  
+}
+@media(max-width:600px){
+    .userInfoRightCont{
+        width: 60%;
+       }  
 }
