--- a/src/components/RecentActivity Cont/RecentActivityCont.module.css
+++ b/src/components/RecentActivity Cont/RecentActivityCont.module.css
@@ -3,13 +3,14 @@
 }
 .outerCont{
     width: 100%;
-    height: 130px;
-    overflow-y: scroll;
+    /* height: 130px; */
+    /* overflow-y: scroll; */
     margin-top: .5rem;
+    padding-bottom: 1.5rem;
 }
-.outerCont::-webkit-scrollbar {
+/* .outerCont::-webkit-scrollbar {
     display: none;
-}
+} */
 .activityCont{
     display: flex;
     align-items: center;
