--- a/src/components/USER CONT/UserContainer.module.css
+++ b/src/components/USER CONT/UserContainer.module.css
@@ -2,8 +2,9 @@
     padding: 1rem;
     background-color: #fafafa;
     border-radius: 15px;
-    height: 100%;
+    /* height: 100%; */
     position: relative;
+    
 }
 .top{
     width: 100%;
