--- a/src/components/OverView Cont/OverViewCont.module.css
+++ b/src/components/OverView Cont/OverViewCont.module.css
@@ -71,10 +71,12 @@ font-weight: 500;
 @media(max-width:730px){
     .rightCont{
 width: 500px;
+height: 200px;
     }  
 }
 @media(max-width:620px){
     .rightCont{
 width: 100%;
+height: 190px;
     }  
 }
